# aimbase-pkg

./: README.md  pyproject.toml  requirements.txt
aimbase/: example_app.py  pyproject.toml
aimbase/aimbase/: __init__.py  initializer.py
aimbase/aimbase/core/: config.py  (+1 more)
aimbase/core/: constants.py  minio.py
aimbase/services/: base.py
aimbase/src/: dependencies.py  initializer.py
aimbase/tests/: example_app.py  example_app_2.py
app/: main.py
app copy/routers/: base.py
app/core/: config.py
app/models/: entity.py
app/routers/: base.py  documents.py
app/schemas/: base.py  document.py
app/utils/: models.py
app_archive/: dependencies.py  initial_data.py
app_archive/crud/: base.py
app_archive/db/: base.py  init_db.py  session.py
app_archive/models/: base.py
app_archive/schemas/: base.py
app_archive/utils/: models.py
chainbase/hybrid_rerank_retrieval/: pyproject.toml
chainbase/hybrid_rerank_retrieval/hybrid_rerank_retrieval/: ai_services.py  document.py  openai_retrieve_summarize_service.py  retrieval_service.py  router.py  service.py
chainbase/hybrid_rerank_retrieval/tests/: example_app.py
examples/: main.py
examples/env_vars/: development.env  local.env
gptbase/: data.py  finetune-lora.yml  finetune.py  pyproject.toml
instarest/: __init__.py  dependencies.py  docker-compose.yml  initializer.py  pyproject.toml
instarest/apps/: base.py
instarest/core/: config.py  logging.py
instarest/db/: base_class.py
instarest/instarest/: __init__.py  initializer.py
instarest/routers/: base.py
instarest/schemas/: base.py
instarest/src/: initializer.py
instarest/tests/: example_app.py
instarest/utils/: models.py
tests/: conftest.py  example_app.py  test_api.py  test_dependencies.py
tests/crud/: conftest.py  test_base.py
tests/env_vars/: production.env
tests/routers/: conftest.py  test_base_delete.py
tests/settings/: test_settings.py
(+82 files in other folders)
