[tool.poetry]
name = "hybrid-rerank-retrieval"
version = "0.0.1"
description = "A hybrid approach to semantic query retri using the Beir rerank methodology"
authors = ["erob123 <ejr443@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hybrid_rerank_retrieval"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.275"
rank-bm25 = "^0.2.2"
faiss-cpu = "^1.7.4"
openai = "^0.28.0"
pydantic = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
